@@ -21,8 +21,8 @@ jobs:
     runs-on: ubuntu-22.04
 
     env:
-      CMAKE_VERSION: 3.13
-      CMAKE_VERSION_FULL: 3.13.5
+      CMAKE_VERSION: 3.16
+      CMAKE_VERSION_FULL: 3.16.9
 
     steps:
       - uses: actions/checkout@v4
