@@ -22,4 +22,5 @@ Infrastructure & dependencies:
 
 Other:
 - The built-in "win*" and "unix*" platforms will now default to signed char type instead of unknown signedness. If you require unsigned chars please specify "--funsigned-char"
+- bumped minimum required CMake version to 3.16
 -
